# hexarch-guardrails

./: .gitignore  AUDIT_FINDINGS_FIXES.md  BOUNDARY_CLARIFICATION.md  CANONICAL_DEMO_PATH.md  CHANGELOG.md  COMPLETION_REPORT.md  DELIVERY_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DETERMINISTIC_EVALUATION_EXAMPLE.md  EVIDENCE_EXPORT_WALKTHROUGH.md  FAIL_CLOSED_BEHAVIOR.md  FILE_MANIFEST.md  GITHUB_DISCUSSION_POST_DRAFT.md  GITHUB_RELEASE_v0.1.0.md  GOOD_FIRST_ISSUES.md  GPG_SETUP_COMPLETE.md  GPG_SIGNING_SETUP.md  HEXARCH_POSITIONING_AXES.md  HEXARCH_SYSTEM_OVERVIEW.md  IMPLEMENTATION_STATUS.md  INDEX.md  INTEGRATION_PATTERNS.md  LICENSE  MINIMAL_PRODUCTION_PATH.md  N8N_SINGLE_USER_MILESTONE.md  NODE_RED_SINGLE_USER_MILESTONE.md  PERFORMANCE_ENVELOPE.md  PHASE_1_CLI_FRAMEWORK_COMPLETE.md  PHASE_2_FINAL_STATUS.md  PHASE_2_POLICY_COMMANDS_COMPLETE.md  PHASE_2_RESOLUTION_SUMMARY.md  PHASE_2_TEST_STRATEGY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_FINAL_STATUS.md  POLICY_COMMANDS_GUIDE.md  POLICY_LIFECYCLE.md  PUBLICATION_SUMMARY.md  PUBLIC_DISTRIBUTION_CHANNELS.md  PUBLISH_CHECKLIST.md  PYPI_PUBLICATION.md  (+20 more)
.github/: Instructions.md  copilot-instructions.md
.github/prompts/: documentation-alignment.prompt.md
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
blog/: how_i_saved_2000_on_openai.md
demos/: README.md  first_run_guarded_call_demo.py  hexarch_guardrails_demo.ipynb  opa_preflight_policy_probe.py
docs/: API_REFERENCE.md  CLAIMS_VALIDATION_MATRIX.md  IMPLEMENTATION_AUDIT.md  INTEGRATION_GUIDE.md  POLICY_GUIDE.md  PUBLIC_DOCUMENTATION.md  PYPI_CLAIMS_VALIDATION.md  TECHNICAL_SOURCE_DOCUMENTATION.md
evals/: policy_cases.json
examples/: __init__.py  discord_ratelimit.py  openai_budget.py  safe_delete.py  tinyllama_guardrails.py
examples/public-demos/: INDEX.md  MODEL_USAGE_CONTAINMENT.md  RECURSION_LOOP_PREVENTION_NODE_RED.md  THRESHOLD_PRE_EXECUTION_DEMO.md  model-containment-policy.json  model-containment-rule-allowlist.json  model-containment-rule-token-ceiling.json
flowise/: ADDING_PRE_EXECUTION_POLICY_ENFORCEMENT_TO_FLOWISE_IN_15_MINUTES.md
flowise/snippets/: authorize-request-body.json  flow-state-example.json
github-actions/: ADDING_PRE_EXECUTION_POLICY_ENFORCEMENT_TO_GITHUB_ACTIONS_IN_15_MINUTES.md
github-actions/workflows/: hexarch-pre-deploy-policy-gate-demo.yml
hexarch_cli/: __init__.py  __main__.py  cli.py  context.py  db.py  ops_events.py  rules_engine.py
hexarch_cli/api/: __init__.py  auth.py  client.py
hexarch_cli/commands/: __init__.py  config.py  db.py  decision.py  entitlement.py  (+6 more)
hexarch_guardrails/: __init__.py  exceptions.py  fastapi_policy.py  guardian.py  opa_client.py  policy_bundles.py  policy_engine.py  policy_loader.py  runtime_settings.py  templates.py
langflow/: ADDING_PRE_EXECUTION_POLICY_ENFORCEMENT_TO_LANGFLOW_IN_15_MINUTES.md  README.md
n8n/: ADDING_PRE_EXECUTION_POLICY_ENFORCEMENT_TO_N8N_IN_15_MINUTES.md  docker-compose.n8n.yml
node-red/: ADDING_PRE_EXECUTION_POLICY_ENFORCEMENT_TO_NODE_RED_IN_15_MINUTES.md  docker-compose.node-red.yml
pipedream/: ADDING_PRE_EXECUTION_POLICY_ENFORCEMENT_TO_PIPEDREAM_IN_15_MINUTES.md  README.md
postman/: ADDING_PRE_EXECUTION_POLICY_ENFORCEMENT_TO_POSTMAN_IN_15_MINUTES.md
scripts/: dev_up.ps1  export_node_red_milestone_evidence.py  node_red_setup.ps1  run_openapi_credibility_scan.ps1  run_openapi_credibility_scan.py  run_policy_credibility_evals.ps1  run_policy_credibility_evals.py  run_zap_baseline_credibility_scan.ps1  run_zap_baseline_credibility_scan.py  seed_opa_policies.ps1  smoke_api.ps1  smoke_api.sh  start_opa.ps1
tests/: __init__.py  test_guardian.py  test_models.py  test_opa_client.py  test_policy_bundles.py  test_policy_engine.py  test_policy_loader.py  test_rules_engine.py  test_runtime_settings.py  test_server_authorize.py  test_server_demo.py  test_smoke_uvicorn.py
workflows/: publish.yml
zapier/: ADDING_PRE_EXECUTION_POLICY_ENFORCEMENT_TO_ZAPIER_IN_15_MINUTES.md  README.md
(+57 files in other folders)
