[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexarch-guardrails"
version = "0.1.0"
description = "Lightweight policy-driven API protection and guardrails library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Noir Stack", email = "hira@noirstack.com"}
]
maintainers = [
    {name = "Hira", email = "hira@noirstack.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["policy", "guardrails", "api", "protection", "opa"]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=5.0",
]

[project.urls]
Homepage = "https://www.noirstack.com/"
Repository = "https://github.com/no1rstack/hexarch-guardrails"
Documentation = "https://github.com/no1rstack/hexarch-guardrails#readme"
Issues = "https://github.com/no1rstack/hexarch-guardrails/issues"

[tool.setuptools]
packages = ["hexarch_guardrails"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hexarch_guardrails --cov-report=html"
