[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexarch-guardrails"
version = "0.4.0"
description = "Lightweight policy-driven API protection and guardrails library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Noir Stack", email = "hira@noirstack.com"}
]
maintainers = [
    {name = "Hira", email = "hira@noirstack.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["policy", "guardrails", "api", "protection", "opa"]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.21.0",
    "click>=8.1.0",
    "pydantic>=2.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "pydantic>=2.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
server = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0,<0.28",
    "uvicorn>=0.27.0",
]
credibility = [
    "schemathesis>=3.30.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=5.0",
]

[project.scripts]
hexarch-ctl = "hexarch_cli:cli"

[project.urls]
Homepage = "https://www.noirstack.com/"
Repository = "https://github.com/no1rstack/hexarch-guardrails"
Documentation = "https://github.com/no1rstack/hexarch-guardrails#readme"
Issues = "https://github.com/no1rstack/hexarch-guardrails/issues"

[tool.setuptools]
packages = [
    "hexarch_guardrails",
    "hexarch_cli",
    "hexarch_cli.api",
    "hexarch_cli.commands",
    "hexarch_cli.config",
    "hexarch_cli.logging",
    "hexarch_cli.migrations",
    "hexarch_cli.migrations.versions",
    "hexarch_cli.models",
    "hexarch_cli.output",
    "hexarch_cli.server",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hexarch_guardrails --cov-report=html"
